fixed button on mobile - thanks @jackosborne

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -590,3 +590,10 @@ cursor: pointer;
 		}
 	}
 }
+
+
+@media only screen and (max-width: 400px) {
+	.button, .button a{
+			padding:0 25px;
+	}
+}
